--- a/7.03_activity_3.md
+++ b/7.03_activity_3.md
@@ -1,5 +1,8 @@
 # 7.03 Activity 3
 
-- Earlier in the unit we talked about probability distributions. What are the two main types of probability distributions? How are they different from each other? Give two examples for each one of them. Also talk about the parameter for each one of those distributions.
+**Note: Earlier in the unit we talked about probability distributions. In this activity we are not asking questions on the contents talked about in the lesson. These are some questions about probability distributions and data disttibutions. These concepts build the fundamentals for statistical tests. This activity is a review of these concepts**  
+
+
+- What are the two main types of probability distributions? How are they different from each other? Give two examples for each one of them. Also talk about the parameter for each one of those distributions.
 
 - What is the difference between normal distribution and a standard distribution? List down some properties of a normal distribution.
